* Fixed #013505: Anchor in links are lost
* Updated TinyMCE to 3.1.1
* Added support for setting image alt text when uploading image
* Implemented #013507: Bookmarks in ezoe 5
* Fixed #013509: Layout on help or others "long text" pages
* Implemented #013512: Class list in search form should be alphabetical sorted
* Made mini editor layout enabled by default (uncommented it)


5.0rc4
* Fixed regression #013486: Can't change properties of OL, LI or UL


5.0rc3
* regression in rc2 caused inserting embed tags not to work in some browsers
* updated doc/ezoe_intro.odt with new screen shoots and text.

5.0rc2
* Cleaned up i18n use and Nor-NO, and synced untranslated.ts with the Nor-NO file.
* Language for TinyMCE now uses Locale from site ini instead of locale from xml attribute.
* Fixed: Some strings in table dialog where not using i18n().
* Show more editor friendly names on xml tags in path ( tr -> table row )
* Fixed #013402: OE problem if ezxmlfield is required /empty andAdd object (objectrelation) is clicked
* Only allow image selections in browse and bookmark node lists when image button is pressed
* Fixed regression in image popup: search did not filter on image classes
* Added workaround for #013013 (Link with anchor removed on re-edit) in Internet Explorer
* Added Validation for deleted embed objects on publish
  partly fixing #013391: ezoe handles removed images incorrect
* make ctrl+8|9 set pre tag instead of unsupported div|address tags

5.0rc
* Fixed #013320: (Development mode doesn't work fully)
* Removed CustomAttributeStyleMap since it caused embed / embed-inline tags to be converted 
 to a font tag by the browser if you for instance used 'color' style for text-color.
* Added CompatibilityMode in ezoe.ini to make editor behave like OE 4.x in respect to embed tags
  (attachment icons)
* Added bookmarks tab in upload dialog
* Stop tinyMCE from trying to load i18n script a second time (unwanted 404).